--- a/contact.css
+++ b/contact.css
@@ -1,10 +1,3 @@
-h2 {
-    color: whitesmoke;
-}
-
-
-
-
 
 
 /*barre de tete avec logo*/
@@ -12,16 +5,110 @@ header {
     line-height: 23px;
     font-weight: 500;
     top: 0;
-    background-color: white;
+    background-color: #fff;
 
 }
-.baniere-haut
+
+
+h1
 {
+    color: #fff;
+    font-size: 1.7em;
+}
+
+.logo {
+
+    padding-left: 5%;
+    padding-top: 1%;
+    border-bottom: 1 solid #ccc;
+    margin-bottom: 0;
+    max-height: 54%;
+    display: inline-block;
+    width: 30%;
+}
+
+/*texte de présentation et lien cadre bleu*/
+.textelink {
+    height: auto;
+    background-color: #0062ff;
+    padding-top: 20px;
+    padding-right: 5%;
+    padding-bottom: 20px;
+    padding-left: 5%;
+    min-height: 1px;
+    display: grid;
 
 }
-main{
-    background-color: blueviolet;
-    margin: 0 10%;
+
+
+.pres {
+    display: flex;
+}
+
+/*photo visage*/
+.imagepres {
+    width: 75%;
+    display: flex;
+}
+
+
+.textelink {
+    width: 60%;
+}
+
+.entete {
+    width: 100%;
+}
+
+
+img {
+    max-width: 100%;
+
+    margin: 0 auto;
+}
+
+.textelink,
+.imagepres {
+    align-items: flex-end;
+}
+
+.insc{
+    font-size: 17px;
+    color: #fff;
+    background-color: #e74a34;
+    display: block;
+    padding: 10px ;
+    width: 69%;
+}
+.link-container{
+    display: flex;
+    flex-direction: row ;
+    
+    
+    
+}
+.utilelink{
+    font-size: 17px;
+    
+    
+}
+.icone{
+    width: 34px;
+    
+}
+.lientext{
+    color: #fff;
+    
+}
+#logobas{
+    
+}
+
+
+body{
+    background-color: white;
+    margin: 0 0;
+    width: 100%;
 }
 
 .contain-flex {
@@ -32,11 +119,11 @@ main{
 }
 .contain-grid {
 }
-}
+
 form {
-    font-size: 1.2rem;
+    font-size: 1rem;
     max-width: 500px;
-    max-éheight: 600px;
+    max-height: 500px;
     margin: 0 auto;
 }
 fieldset {
@@ -54,28 +141,30 @@ fieldset {
 }
 
 .container-contact { 
-    grid-area: 50% 40% 10%;
-    height: 80px;
+    height: 60px;
+
+    display: flex;
+    padding: 5%;
+    margin: auto auto;
+
 }
+.container-contact a {
+    text-decoration: none;
 
 
-.container-contact button {
-
-    font-family:fantasy;
-    font-size: 2rem;
-    padding: 1%;
-    margin: auto 2rem;
+    font-variant: small-caps;
+    font-size: 1.5rem;
+    padding: 10px;
     background-color: red;
     border: black double 1px;
     border-radius: 10px;
 
 }
 .question {
-    width: 60%;
-    background-color: grey;
-    border-radius: 50px;
+    width: 100%;
     text-align: center;
     margin: 0 auto;
+    color: black;
 }
 
 .liens-reseaux {
@@ -83,12 +172,17 @@ fieldset {
     justify-content: space-around;
     padding: 2%;    
 }
+.contain-box {
 
+   display: grid;
+   justify-content: center;
+}
 .container-principal {
    display: grid;
    justify-content: center;
    flex-direction: column;
    text-align: center;
+   background-color: #0062ff;
 }
 .photo {
     padding: 10%;   
@@ -100,4 +194,14 @@ fieldset {
 }
 .container-header-gauche {
 
+}
+footer {
+    background-color: rgb(31,31,31);
+    color: white;
+    display: flex;
+    padding: 7%;
+}
+.liste-liens {
+    margin: auto auto;
+    flex-direction: column;
 }
