--- a/contact.css
+++ b/contact.css
@@ -8,12 +8,28 @@ header {
     background-color: #fff;
 
 }
-
+p {
+    font-size: 1.2rem;
+}
 
 h1
 {
     color: #fff;
     font-size: 1.7em;
+}
+
+h2 {
+    color: white;
+}
+h3 {
+    font-size: 2rem;
+}
+.center {
+        text-align: center;
+
+    }
+.mentions-legales {
+    font-size: 0.7rem;
 }
 
 .logo {
@@ -137,8 +153,15 @@ fieldset {
     margin: auto auto;
 }
 #message {
-    height: 200px;
-    width: 80%;
+    height: 100px;
+    width: 60%;
+}
+#envoyer {
+    margin: 1rem auto;
+    background-color: #e74a34;
+    width: 150px;
+    height: 30px;
+    border-radius: 10px;
 }
 .container-contact{
     font-variant: small-caps; 
@@ -196,13 +219,15 @@ fieldset {
 
 }
 .accroche{
+    display: block;
+    text-align: justify;
     width: 40%;
 }
 footer {
     background-color: rgb(31,31,31);
     color: white;
     display: flex;
-    padding: 7%;
+    padding: 1%;
 }
 .liste-liens {
     margin: 2rem auto;
