--- a/contact.css
+++ b/contact.css
@@ -171,13 +171,10 @@ fieldset {
     justify-content: center;
     align-items: center;
     margin: 1rem auto;
-    text-decoration: none;
     color: white;
     padding: 2%;
 
     
-}
-#contact {
 }
 .container-contact a {
     text-decoration: none;
@@ -185,7 +182,7 @@ fieldset {
 
 }
 .container-contact:hover {
-    background-color: rgba(0,0,0,0.5)
+    background-color: rgba(10,10,10,0.5);
 }
 
 .question {
@@ -235,6 +232,7 @@ footer {
     justify-content: center;
 }
 #gauche {
+    margin: auto auto;
     width: 500px;
 }
 #rejoindre {
