--- a/page-accueil.css
+++ b/page-accueil.css
@@ -5,8 +5,8 @@
      
 }
 .dropdown button{
-    background-color: hsl(0, 0%, 80%);
-    color: white;
+    background-color: oklab(55.605000000000004% -0.03694 -0.24263);
+    color: rgb(0, 0, 0);
     padding: 10px 15px;
     border: none;
     cursor: pointer;
@@ -39,162 +39,6 @@
     right: 0; 
     }
 
-
-    
-    
-    .dropdown{
-    display: inline-block;
-     
-}
-.dropdown button{
-    background-color: hsl(0, 0%, 80%);
-    color: white;
-    padding: 10px 15px;
-    border: none;
-    cursor: pointer;
-}
-.dropdown a{
-    display: block;
-    color: black;
-    text-decoration: none;
-    padding: 10px 15px;
-}
-.dropdown .content{
-    display: none;
-    position: absolute;
-    background-color: hsl(0, 0%, 95%);
-    min-width: 100px;
-    box-shadow: 2px 2px 5px hsla(0, 0%, 0%, 0.8);
-    
-}
-.dropdown:hover .content{
-    display: block;
-}
-.dropdown:hover button{
-    background-color: hsl(0, 0%, 70%);
-}
-.dropdown a:hover{
-    background-color: hsl(0, 0%, 90%);
-}
-.dropdown-content {  
-
-    right: 0; 
-    }
-        .dropdown{
-    display: inline-block;
-     
-}
-.dropdown button{
-    background-color: hsl(0, 0%, 80%);
-    color: white;
-    padding: 10px 15px;
-    border: none;
-    cursor: pointer;
-}
-.dropdown a{
-    display: block;
-    color: black;
-    text-decoration: none;
-    padding: 10px 15px;
-}
-.dropdown .content{
-    display: none;
-    position: absolute;
-    background-color: hsl(0, 0%, 95%);
-    min-width: 100px;
-    box-shadow: 2px 2px 5px hsla(0, 0%, 0%, 0.8);
-    
-}
-.dropdown:hover .content{
-    display: block;
-}
-.dropdown:hover button{
-    background-color: hsl(0, 0%, 70%);
-}
-.dropdown a:hover{
-    background-color: hsl(0, 0%, 90%);
-}
-.dropdown-content {  
-
-    right: 0; 
-    }
-     .dropdown{
-    display: inline-block;
-     
-}
-.dropdown button{
-    background-color: hsl(0, 0%, 80%);
-    color: white;
-    padding: 10px 15px;
-    border: none;
-    cursor: pointer;
-}
-.dropdown a{
-    display: block;
-    color: black;
-    text-decoration: none;
-    padding: 10px 15px;
-}
-.dropdown .content{
-    display: none;
-    position: absolute;
-    background-color: hsl(0, 0%, 95%);
-    min-width: 100px;
-    box-shadow: 2px 2px 5px hsla(0, 0%, 0%, 0.8);
-    
-}
-.dropdown:hover .content{
-    display: block;
-}
-.dropdown:hover button{
-    background-color: hsl(0, 0%, 70%);
-}
-.dropdown a:hover{
-    background-color: hsl(0, 0%, 90%);
-}
-.dropdown-content {  
-
-    right: 0; 
-    }
-        .dropdown{
-    display: inline-block;
-     
-}
-.dropdown button{
-    background-color: hsl(0, 0%, 80%);
-    color: white;
-    padding: 10px 15px;
-    border: none;
-    cursor: pointer;
-}
-.dropdown a{
-    display: block;
-    color: black;
-    text-decoration: none;
-    padding: 10px 15px;
-}
-.dropdown .content{
-    display: none;
-    position: absolute;
-    background-color: hsl(0, 0%, 95%);
-    min-width: 100px;
-    box-shadow: 2px 2px 5px hsla(0, 0%, 0%, 0.8);
-    
-}
-.dropdown:hover .content{
-    display: block;
-}
-.dropdown:hover button{
-    background-color: hsl(0, 0%, 70%);
-}
-.dropdown a:hover{
-    background-color: hsl(0, 0%, 90%);
-}
-.dropdown-content {  
-
-    right: 0; 
-    }
-   
    
 
 
@@ -214,7 +58,7 @@ header {
 /*texte de présentation et lien cadre bleu*/
 .textelink {
     height: auto;
-    background-color: #0062ff;
+    background-color: oklab(55.605000000000004% -0.03694 -0.24263);
     padding-top: 20px;
     padding-right: 5%;
     padding-bottom: 20px;
